Fix for line wrapping on some systems.

--- a/src/app.css
+++ b/src/app.css
@@ -19,8 +19,12 @@ body {
 }
 
 .poem-line {
+  border: none;
   display: inline-block;
+  margin: 0;
+  overflow: hidden;
   padding-right: 50px;
+  white-space: nowrap;
 }
 
 .poem-line.writing::after {
